<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/txtNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/yeucau"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnBubble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bubble" />

    <Button
        android:id="@+id/btnIntertion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intertion" />

    <Button
        android:id="@+id/btnMerge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/merge" />

    <Button
        android:id="@+id/btnQuick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quick" />

    <Button
        android:id="@+id/btnSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selection" />
</LinearLayout>